--- a/install
+++ b/install
@@ -1,14 +1,17 @@
 #!/bin/bash
 
 #rimuovo i file vecchi
-rm ~/.vimrc
-rm -rf ~/vim
-rm ~/.bashrc
-rm ~/.i3/config
+[[ -f ~/.vimrc ]] && rm ~/.vimrc
+[[ -f ~/.vim ]] && rm -rf ~/.vim
+[[ -f ~/.bashrc ]] && rm ~/.bashrc
+[[ -f ~/.i3/config ]] && rm ~/.i3/config
+[[ -f ~/fzf.bash ]] && rm ~/fzf.bash
 
+~/Utilità/ 
 #li ricostruisco facendo dei link simbolici
 ln -s ~/Dotfiles/vim ~/.vim
 ln -s ~/Dotfiles/bashrc ~/.bashrc
+ln -s ~/Dotfiles/fzf.bash ~/.fzf.bash
 
 #installa vimplug
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
@@ -20,15 +23,18 @@ echo "Open vim and digit ':PlugInstall'"
 #configurazione i3
 if [ "$DESKTOP_SESSION" = "i3" ]; then
     # i3 config
-    ln -s ~/Dotfiles/i3/i3.conf ~/.i3/config
+    mkdir ~/.i3
+    ln -s ~/Dotfiles/i3/i3.conf ~/.i3/config 
     i3 reload
     # i3 blocks config
+    mkdir ~/.i3blocks
     ln -s ~/Dotfiles/i3/i3blocks.conf ~/.i3blocks/config
     i3blocks -c ~/.i3blocks/config
     i3-msg restart
     # download i3 scripts
+    rm -rf ~/.config/i3blocks
     git clone https://github.com/vivien/i3blocks-contrib ~/.config/i3blocks
-    cd !$
+    cd  ~/.config/i3blocks
     for i in * 
     do
         chmod +x "$i"/"$i" 
@@ -38,6 +44,7 @@ if [ "$DESKTOP_SESSION" = "i3" ]; then
     rm -rf i3blocks
     i3-msg restart
 fi
+
 #mette vim come editor predefinito
 xdg-mime default vim.desktop text/*
 
