--- a/install
+++ b/install
@@ -15,6 +15,12 @@ ln -s ~/Dotfiles/fzf.bash ~/.fzf.bash
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 echo "Open vim and digit ':PlugInstall'"
 
+#installa YCM
+sudo apt install python3-dev cmake
+cd ~.vim/plugged/YouCompleteMe
+./install.py
+cd $HOME
+
 #installa fzf
 [[ -d $HOME/.fzf ]] || (echo "Installing fzf... " && git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf && ~/.fzf/install)
 
