Added nord theme vim

--- a/install
+++ b/install
@@ -5,11 +5,13 @@
 [[ -f ~/.vim ]] && rm -rf ~/.vim
 [[ -f ~/.bashrc ]] && rm ~/.bashrc
 [[ -f ~/.fzf.bash ]] && rm ~/.fzf.bash
+[[ -f ~/.config/nvim ]] && rm -rf ~/.config/nvim
 
 #li ricostruisco facendo dei link simbolici
 ln -s ~/Dotfiles/vim ~/.vim
 ln -s ~/Dotfiles/bashrc ~/.bashrc
 ln -s ~/Dotfiles/fzf.bash ~/.fzf.bash
+ln -s ~/Dotfiles/nvim ~/.config
 
 #installa vimplug
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
