--- a/install
+++ b/install
@@ -15,13 +15,12 @@ ln -s ~/Dotfiles/nvim ~/.config
 
 #installa vimplug
 curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-echo "Open vim and digit ':PlugInstall'"
 
 #installa YCM
-sudo apt install python3-dev cmake
-cd ~.vim/plugged/YouCompleteMe
-./install.py
-cd $HOME
+# sudo apt install python3-dev cmake
+# cd ~/.vim/plugged/YouCompleteMe
+# ./install.py
+# cd $HOME
 
 #installa fzf
 [[ -d $HOME/.fzf ]] || (echo "Installing fzf... " && git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf && ~/.fzf/install)
@@ -65,6 +64,7 @@ if [ "$DESKTOP_SESSION" = "i3" ]; then
      
 fi
 
+echo "Open vim and digit ':PlugInstall'"
 #mette vim come editor predefinito
 xdg-mime default vim.desktop text/*
 source ~/.bashrc
